@@ -6,11 +6,12 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
 
-import java.util.stream.Collectors;
-
 public class FHIRPageHelper {
+
+	private FHIRPageHelper() {}
+
 	@NotNull
 	public static <T> PageImpl<T> toPage(SearchHits<T> searchHits, Pageable pageRequest) {
-		return new PageImpl<>(searchHits.get().map(SearchHit::getContent).collect(Collectors.toList()), pageRequest, searchHits.getTotalHits());
+		return new PageImpl<>(searchHits.get().map(SearchHit::getContent).toList(), pageRequest, searchHits.getTotalHits());
 	}
 }
